--- a/_posts/2021-07-08-simulations-remix-turn-up-the-base.Rmd
+++ b/_posts/2021-07-08-simulations-remix-turn-up-the-base.Rmd
@@ -14,9 +14,9 @@ tags:
 knitr::opts_chunk$set(cache = TRUE, dpi = 300, fig.width = 8, fig.height = 5)
 ```
 
-Look, I apologise for the title of this post and will show myself the door shortly.
+*Note: I apologise for the title of this post and will show myself the door shortly.*
 
-But I wanted to quickly follow up on my last post about [efficient simulations in R]({{ site.url }}/efficient-simulations-in-r). If you recall, in that post we used **data.table** and some other tricks to run 40,000 regressions (i.e. 20k simulations with 2 regressions each) in just over 2 seconds. The question before us today is: **Can we go even faster using only base R?** And it turns out that the answer is, yes, we can.
+I wanted to quickly follow up on my last post about [efficient simulations in R]({{ site.url }}/efficient-simulations-in-r). If you recall, in that post we used **data.table** and some other tricks to run 40,000 regressions (i.e. 20k simulations with 2 regressions each) in just over 2 seconds. The question before us today is: **Can we go even faster using only base R?** And it turns out that the answer is, yes, we can.
 
 My motivation for a follow-up is partially the result of [this very nice post](https://elbersb.com/public/posts/interaction_simulation/) by Benjamin Elbers, who replicates my simulation using Julia. In so doing, he demonstrates some of Julia's killer features; most notably the fact that we don't need to think about vectorisation --- e.g. when creating the data --- since Julia's compiler will take care of that for us automatically.[^1] But Ben also does another interesting thing, which is to show the speed gains that come from defining our own (super lean) regression function. He uses Cholesky decomposition and it's fairly straightforward to do the same thing in R. ([Here](https://www.theissaclee.com/post/linearqrandchol/) is a nice tutorial by Issac Lee.) 
 
@@ -124,6 +124,8 @@ microbenchmark(
 There you have it. Down to _less than a second_ for a simulation involving 40,000 regressions using only base R.[^3] On a laptop, no less. Just incredibly impressive. 
 
 **Conclusion:** No grand conclusion today... except a sincere note of gratitude to the R Core team (and Julia devs and so many other OSS maintainers) for providing us with such an incredible base to build from. 
+
+P.S. Achim Zeileis (who else?) has another great tip for speeding up simulations where the experimental design is fixed [here](https://twitter.com/AchimZeileis/status/1413407892556947465).
 
 [^1]: In this house, we stan both R and Julia.
 
